2007-11-11  Norbert Koch  <viteno@xemacs.org>

	* Packages released: dired.

2007-11-05  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ediff prog-modes viper.

2007-10-30  Norbert Koch  <viteno@xemacs.org>

	* Packages released: pcl-cvs vc.

2007-10-15  Norbert Koch  <viteno@xemacs.org>

	* Packages released: mh-e.

	* MAINTAINERS: Sync this file with the contents of the package
	Makefiles.

	* Packages released: mh-e.

2007-09-16  Vin Shelton  <acs@xemacs.org>

	* xemacs-packages/Makefile (PACKAGES): Added easypg.

2007-09-04  Didier Verna  <didier@xemacs.org>

	* MAINTAINERS: Explicitely state that I maintain Patcher in
	xemacs-devel.

2007-09-04  Norbert Koch  <viteno@xemacs.org>

	* Packages released: eshell hm--html-menus liece vm w3.

2007-09-03  Norbert Koch  <viteno@xemacs.org>

	* Packages released: edit-utils.

2007-08-28  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ediff prog-modes vc.

2007-08-23  Norbert Koch  <viteno@xemacs.org>

	* Packages released: scheme.

2007-08-22  Norbert Koch  <viteno@xemacs.org>

	* Packages released: igrep.

2007-08-20  Mike Sperber  <mike@xemacs.org>

	* Local.rules.template (XEMACS_INSTALLED_PACKAGES_ROOT): Move from
	/usr/local/lib to /usr/local/share.

2007-08-19  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ediff viper.

2007-08-15  Norbert Koch  <viteno@xemacs.org>

	* Packages released: apel edt.

	* Packages released: locale.

2007-08-14  Aidan Kehoe  <kehoea@parhasard.net>

	* package-compile.el (depth):
	Add mule-lisp-directory to the load-path when it is non-nil. Fixes
	problems with CCL not being picked up on a 21.5 non-Mule build.

2007-08-14  Norbert Koch  <viteno@xemacs.org>

	* Packages released: mule-ucs.

2007-07-29  Norbert Koch  <viteno@xemacs.org>

	* Packages released: mule-base.

2007-07-24  Norbert Koch  <viteno@xemacs.org>

	* Packages released: mule-base.

2007-07-11  Norbert Koch  <viteno@xemacs.org>

	* Packages released: calendar.
